# vertex-core

./: CMakeLists.txt  Old_SkyBox.cpp  README.md  vcpkg.json
include/: MouseHandler.h
include/inputhandlers/mousehandlers/: CameraRotationHandler.h
include/windowmanagers/: GLFWWindow.h
shaders/clouds/: volumetricclouds.frag
src/: MouseHandler.cpp  Scene.cpp  Terrain.cpp  UserInterface.cpp  main.cpp
src/terraincomponents/: WaterComponent.cpp
src/userinterfaces/: WorldControllerUI.cpp
src/windowmanagers/: GLFWWindow.cpp
